buildroot: change package download directory to buildroot directory
This patch change package download directory to buildroot directory

Change-Id: I2c9239af13c8ba3c52c73f20910d9d87f5a0a9a5
Signed-off-by: jhkim <jhkim@nexell.co.kr>

--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -2,7 +2,7 @@ BR2_arm=y
 BR2_cortex_a7=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_SVN=""
-BR2_DL_DIR="$(TOPDIR)/../down"
+BR2_DL_DIR="$(TOPDIR)/down"
 BR2_BACKUP_SITE="http://sources.buildroot.net/"
 BR2_KERNEL_MIRROR="http://www.kernel.org/pub/"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
