--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -45,6 +45,7 @@ BR2_PACKAGE_MTD_MKFSJFFS2=y
 BR2_PACKAGE_MTD_MKFSUBIFS=y
 BR2_PACKAGE_MTD_MTDPART=y
 BR2_PACKAGE_MTOOLS=y
+BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_GPTFDISK=y
 BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_MEMTESTER=y
@@ -52,6 +53,7 @@ BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_TINYALSA=y
 BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
+BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_EXPAT=y
 BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_CAN_UTILS=y
