nxp3220: package : add nxp3220 cpu freq app
This patch add package nxp3220 lvcc cpu freq app

Change-Id: I6f7913364ace556ad5edfaca1b4eff72108681d3
Signed-off-by: Youngbok Park <ybpark@nexell.co.kr>

--- a/package/Config.in
+++ b/package/Config.in
@@ -2057,4 +2057,7 @@ menu "Text editors and viewers"
 	source "package/vim/Config.in"
 endmenu
 
+menu "Nexell applications"
+	source "package/nexell/Config.in"
+endmenu
 endmenu
