defconfig: nxp4330 slt: modify compiler option
This patch  change cross compile linaro 7.2.1
Some test require 7.2.1 upper compiler version.

Signed-off-by: Youngbok Park <ybpark@nexell.co.kr>
Change-Id: I874bd0aa8e0a919191b5da3f572d25f6b2b201d8
Reviewed-on: https://review.gerrithub.io/c/444025
Reviewed-by: jung hyun kim <jhkim@nexell.co.kr>
Tested-by: jung hyun kim <jhkim@nexell.co.kr>

--- a/configs/nxp4330_slt_defconfig
+++ b/configs/nxp4330_slt_defconfig
@@ -1,5 +1,6 @@
 BR2_arm=y
 BR2_cortex_a9=y
+BR2_ARM_ENABLE_VFP=y
 BR2_SVN=""
 BR2_DL_DIR="$(TOPDIR)/../down"
 BR2_BACKUP_SITE="http://sources.buildroot.net/"
@@ -7,8 +8,8 @@ BR2_KERNEL_MIRROR="http://www.kernel.org/pub/"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-cortex_a9-linux-gnueabi"
-BR2_TOOLCHAIN_EXTERNAL_GCC_4_7=y
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-linux-gnueabihf"
+BR2_TOOLCHAIN_EXTERNAL_GCC_7=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_10=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
@@ -49,8 +50,11 @@ BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_TINYALSA=y
+BR2_PACKAGE_LIBZIP=y
 BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
+BR2_PACKAGE_LIBUSB=y
+BR2_PACKAGE_LIBUSB_COMPAT=y
 BR2_PACKAGE_EXPAT=y
 BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_CAN_UTILS=y
