package/directfb: support drm/kms module replace to fbdev
This patch support drm/kms module replace to fbdev

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: I9efb141514c5b0e4e192711b5cac1b7c1c2d1581

--- a/package/directfb/Config.in
+++ b/package/directfb/Config.in
@@ -155,6 +155,11 @@ config BR2_PACKAGE_DIRECTFB_DITHER_RGB16
 	  Enable dithering when loading images to RGB16 surfaces.
 	  This increases the data section by 64 KBytes.
 
+config BR2_PACKAGE_DIRECTFB_DRMKMS
+	bool "enable drm/kms support (replace fbdev)"
+	help
+	  build with DRM/KMS support
+
 config BR2_PACKAGE_DIRECTFB_TESTS
 	bool "build directfb tests"
 
