--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -68,3 +68,4 @@ BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 BR2_PACKAGE_UTIL_LINUX_NOLOGIN=y
 BR2_TARGET_ROOTFS_CPIO=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_HOST_MTD=y
