--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -6,6 +6,7 @@ BR2_DL_DIR="$(TOPDIR)/down"
 BR2_BACKUP_SITE="http://sources.buildroot.net/"
 BR2_KERNEL_MIRROR="http://www.kernel.org/pub/"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
+# BR2_COMPILER_PARANOID_UNSAFE_PATH is not set
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-linux-gnueabihf"
