package/nexell: modify package names on menuconfig
This patch modify package names on menuconfig

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: I85cf5cb42a368fbbf86adabc58bc3906a00c25ca
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/buildroot/+/451875

--- a/package/nexell/libdirectfb-nexell/Config.in
+++ b/package/nexell/libdirectfb-nexell/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_LIBDIRECTFB_NEXELL
-	bool "libdirectfb-nexell"
+	bool "Directfb gfxdriver"
 	select BR2_PACKAGE_LIBDRM
 	select BR2_PACKAGE_DIRECTFB
 	select BR2_PACKAGE_DIRECTFB_DRMKMS
