--- a/package/nexell/nx-drm-allocator/Config.in
+++ b/package/nexell/nx-drm-allocator/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_NX_DRM_ALLOCATOR
-	bool "nx-drm-allocator"
+	bool "drm allocator"
 	select BR2_PACKAGE_LIBDRM
 	select BR2_PACKAGE_KERNEL_HEADERS
 	help
