--- a/package/nexell/nx-video-api/Config.in
+++ b/package/nexell/nx-video-api/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_NX_VIDEO_API
-	bool "nx-video-api"
+	bool "VPU video api"
 	select BR2_PACKAGE_LIBDRM
 	select BR2_PACKAGE_NX_DRM_ALLOCATOR
 	select BR2_PACKAGE_KERNEL_HEADERS
