--- a/package/directfb/Config.in
+++ b/package/directfb/Config.in
@@ -155,8 +155,13 @@ config BR2_PACKAGE_DIRECTFB_DITHER_RGB16
 	  Enable dithering when loading images to RGB16 surfaces.
 	  This increases the data section by 64 KBytes.
 
+config BR2_PACKAGE_DIRECTFB_FBDEV
+	bool "enable fbdev support"
+	help
+	  build with fbdev support
+
 config BR2_PACKAGE_DIRECTFB_DRMKMS
-	bool "enable drm/kms support (replace fbdev)"
+	bool "enable drm/kms support"
 	help
 	  build with DRM/KMS support
 
