package/nexell: rename nx_video_api_test to video api test in Config.in
This patch rename nx_video_api_test to video api test in Config.in

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: I306707ab4aa62c2648edd837a20b6e5232e2251e
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/buildroot/+/452941

--- a/package/nexell/nx_video_api_test/Config.in
+++ b/package/nexell/nx_video_api_test/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_NX_VIDEO_API_TEST
-	bool "nx_video_api_test"
+	bool "video api test"
 	select BR2_PACKAGE_NX_DRM_ALLOCATOR
 	select BR2_PACKAGE_NX_VIDEO_API
 	select BR2_PACKAGE_NX_V4L2
