package/nexell: adds nx_vip_test pacakge to support nexell vip test
This patch adds nx_vip_test pacakge to support nexell vip test

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: Ib7a46cc7ff36c8af6f73aab8ef08d969142f73b2
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/buildroot/+/452942

--- a/package/nexell/Config.in
+++ b/package/nexell/Config.in
@@ -25,5 +25,6 @@ if BR2_PACKAGE_NEXELL
 		source "package/nexell/hwio/Config.in"
 		source "package/nexell/i2c_test/Config.in"
 		source "package/nexell/nx_video_api_test/Config.in"
+		source "package/nexell/nx_vip_test/Config.in"
 	endmenu
 endif
