--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -40,6 +40,7 @@ BR2_PACKAGE_ALSA_UTILS_IECSET=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_ZIP=y
 BR2_PACKAGE_LMBENCH=y
+BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_MTD_JFFS2DUMP=y
 BR2_PACKAGE_MTD_MKFSJFFS2=y
