buildroot: defconfig: enable rtc-tools to test rtc device
This patch enable rtc-tools to test rtc device

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: I26596063752c1d38a440f96e2e5ab24c6386cd9f

--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -52,6 +52,7 @@ BR2_PACKAGE_GPTFDISK=y
 BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_PARTED=y
+BR2_PACKAGE_RTC_TOOLS=y
 BR2_PACKAGE_TINYALSA=y
 BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
