buildroot: defconfig: enable nexell applicatioin and libries
This patch enable nexell applicatioin and libries

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: I94fd3de07cf041bb2c862e1ab27a7678d8e321a8

--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -54,10 +54,7 @@ BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RTC_TOOLS=y
 BR2_PACKAGE_TINYALSA=y
-BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
-BR2_PACKAGE_TSLIB=y
-BR2_PACKAGE_EXPAT=y
 BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_IPERF=y
@@ -69,5 +66,11 @@ BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_UTIL_LINUX_FSCK=y
 BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 BR2_PACKAGE_UTIL_LINUX_NOLOGIN=y
+BR2_PACKAGE_LIBDIRECTFB_NEXELL=y
+BR2_PACKAGE_DISK_TEST=y
+BR2_PACKAGE_HWIO=y
+BR2_PACKAGE_I2C_TEST=y
+BR2_PACKAGE_NX_VIDEO_API_TEST=y
+BR2_PACKAGE_NX_VIP_TEST=y
 BR2_TARGET_ROOTFS_CPIO=y
 # BR2_TARGET_ROOTFS_TAR is not set
