--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -58,6 +58,7 @@ BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_IPERF=y
+BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPUTILS=y
 BR2_PACKAGE_ANDROID_TOOLS=y
 BR2_PACKAGE_ANDROID_TOOLS_ADB=y
