buildroot: defconfig: enable iozone/memstat tool
This patch enable iozone/memstat tool

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: Ie23342766fea7402242218908fc6fd98c75e60e6
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/buildroot/+/460400

--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -39,7 +39,9 @@ BR2_PACKAGE_ALSA_UTILS_BAT=y
 BR2_PACKAGE_ALSA_UTILS_IECSET=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_ZIP=y
+BR2_PACKAGE_IOZONE=y
 BR2_PACKAGE_LMBENCH=y
+BR2_PACKAGE_MEMSTAT=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_MTD_JFFS2DUMP=y
