defconfig: nxp4330 slt: change compiler version
This patch  change cross compile to eabi-4.7-eglibc-2.18

Signed-off-by: jhkim <jhkim@nexell.co.kr>
Change-Id: I566ffe85fa269e4b7c1932ac66f1d7e39dd0ba25

--- a/configs/nxp4330_slt_defconfig
+++ b/configs/nxp4330_slt_defconfig
@@ -1,6 +1,7 @@
 BR2_arm=y
 BR2_cortex_a9=y
 BR2_ARM_ENABLE_VFP=y
+BR2_ARM_EABI=y
 BR2_SVN=""
 BR2_DL_DIR="$(TOPDIR)/../down"
 BR2_BACKUP_SITE="http://sources.buildroot.net/"
@@ -8,9 +9,9 @@ BR2_KERNEL_MIRROR="http://www.kernel.org/pub/"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-linux-gnueabihf"
-BR2_TOOLCHAIN_EXTERNAL_GCC_7=y
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_10=y
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-cortex_a9-linux-gnueabi"
+BR2_TOOLCHAIN_EXTERNAL_GCC_4_7=y
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_4=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 BR2_TARGET_OPTIMIZATION="-pipe -mno-unaligned-access"
