package/nexell: adds sleep_rtc_alarm pacakge to support nexell sleep test
This patch adds sleep_rtc_alarm pacakge to support nexell sleep test.

Signed-off-by: GyoungBo Min <mingyoungbo@nexell.co.kr>
Change-Id: I39adb62f7f9f5987575b195e203d08c412d07e58
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/buildroot/+/476585
Reviewed-by: jung hyun kim <jhkim@nexell.co.kr>
Tested-by: jung hyun kim <jhkim@nexell.co.kr>

--- a/package/nexell/Config.in
+++ b/package/nexell/Config.in
@@ -26,5 +26,6 @@ if BR2_PACKAGE_NEXELL
 		source "package/nexell/i2c_test/Config.in"
 		source "package/nexell/nx_video_api_test/Config.in"
 		source "package/nexell/nx_vip_test/Config.in"
+		source "package/nexell/sleep_rtc_alarm/Config.in"
 	endmenu
 endif
