--- a/project.config
+++ b/project.config
@@ -2,12 +2,11 @@
 	inheritFrom = All-Projects
 [project]
 [access "refs/*"]
+	owner = group user/Hyunseok Jung (aronjung)
 	owner = group user/Nexell Jenkins (nxJenkins)
-	owner = group user/Sungwoo Park (swpark)
 	owner = group user/allan park (mcjino21)
 	owner = group user/jung hyun kim (nxrohan)
 	owner = group user/kjlee81
-	owner = group user/pybok81
 [access "refs/for/refs/*"]
 	read = group user/Sungwoo Park (swpark)
 	push = group user/Sungwoo Park (swpark)
