--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -22,6 +22,7 @@ BR2_ROOTFS_DEVICE_TABLE=""
 BR2_TARGET_TZ_INFO=y
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/nexell/post-image-sysv-nologin.sh"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/nexell/busybox.config"
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
 BR2_PACKAGE_ALSA_UTILS_ACONNECT=y
@@ -65,6 +66,7 @@ BR2_PACKAGE_IPUTILS=y
 BR2_PACKAGE_ANDROID_TOOLS=y
 BR2_PACKAGE_ANDROID_TOOLS_ADB=y
 BR2_PACKAGE_ANDROID_TOOLS_ADBD=y
+BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_UTIL_LINUX_FSCK=y
 BR2_PACKAGE_UTIL_LINUX_MOUNT=y
