nxp3220: package: add i2s test app for lvcc
This patch add i2s test app for lvcc alsa loopback test

Signed-off-by: Ken Kim <kenkim@nexell.co.kr>
Change-Id: Ia5bd8506508f767c8019074351c275ae08c45850

--- a/package/nexell/Config.in
+++ b/package/nexell/Config.in
@@ -10,6 +10,7 @@ config BR2_PACKAGE_NXP3220
 endchoice
 
 source "package/nexell/asv-devfs/Config.in"
+source "package/nexell/i2stest/Config.in"
 source "package/nexell/hwtest/Config.in"
 source "package/nexell/vpu/Config.in"
 source "package/nexell/library/Config.in"
