--- a/configs/nxp3220_asv_bus_defconfig
+++ b/configs/nxp3220_asv_bus_defconfig
@@ -72,5 +72,7 @@ BR2_PACKAGE_HWTEST_DISK=y
 BR2_PACKAGE_HWTEST_ETH=y
 BR2_PACKAGE_NEXELL_VPU=y
 BR2_PACKAGE_NEXELL_VPU_TEST=y
+BR2_PACKAGE_I2STEST=y
+BR2_PACKAGE_I2STEST_LOOP=y
 BR2_TARGET_ROOTFS_CPIO=y
 # BR2_TARGET_ROOTFS_TAR is not set
