--- a/project.config
+++ b/project.config
@@ -5,6 +5,7 @@
 	owner = group user/Hyunseok Jung (aronjung)
 	owner = group user/Nexell Jenkins (nxJenkins)
 	owner = group user/SeongO Park (raypark714)
+	owner = group user/SeongO Park (raypark714)
 	owner = group user/allan park (mcjino21)
 	owner = group user/jung hyun kim (nxrohan)
 [access "refs/for/refs/*"]
