Modify access rules

--- a/project.config
+++ b/project.config
@@ -10,19 +10,31 @@
 	owner = group user/jung hyun kim (nxrohan)
 [access "refs/for/refs/*"]
 	read = group user/SeongO Park (raypark714)
+	read = group user/jung hyun kim (nxrohan)
 	push = group user/SeongO Park (raypark714)
+	push = group user/jung hyun kim (nxrohan)
 	label-Code-Review = -2..+2 group user/SeongO Park (raypark714)
+	label-Code-Review = -2..+2 group user/jung hyun kim (nxrohan)
 	label-Verified = -1..+1 group user/SeongO Park (raypark714)
+	label-Verified = -1..+1 group user/jung hyun kim (nxrohan)
 	rebase = group user/SeongO Park (raypark714)
+	rebase = group user/jung hyun kim (nxrohan)
 	removeReviewer = group user/SeongO Park (raypark714)
+	removeReviewer = group user/jung hyun kim (nxrohan)
 	submit = group user/SeongO Park (raypark714)
+	submit = group user/jung hyun kim (nxrohan)
 [access "refs/heads/*"]
 	read = group user/SeongO Park (raypark714)
+	read = group user/jung hyun kim (nxrohan)
 	create = group user/SeongO Park (raypark714)
+	create = group user/jung hyun kim (nxrohan)
 	push = group user/SeongO Park (raypark714)
+	push = group user/jung hyun kim (nxrohan)
 	pushMerge = group user/SeongO Park (raypark714)
+	pushMerge = group user/jung hyun kim (nxrohan)
 [access "refs/tags/*"]
 	push = group user/SeongO Park (raypark714)
+	push = group user/jung hyun kim (nxrohan)
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
