hwtest: ethernet loopback test
This patch use full-duplex ethernet communication between two ethernet NIC
Under full performance test condition.

Signed-off-by: ponytail2k <kwanghyuk@nexell.co.kr>
Change-Id: If6c017e1687f88855098e58eea922d7cb798e691
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/buildroot/+/484365
Reviewed-by: Eric.park <pjsin865@nexell.co.kr>
Tested-by: Eric.park <pjsin865@nexell.co.kr>

--- a/package/nexell/hwtest/hwtest-eth/Makefile
+++ b/package/nexell/hwtest/hwtest-eth/Makefile
@@ -1,20 +1,19 @@
 VERSION_STR="\"0.2\""
 
-#CFLAGS=-DVERSION_STR=$(VERSION_STR) -g 
+#CFLAGS=-DVERSION_STR=$(VERSION_STR) -g
 CFLAGS=-DVERSION_STR=$(VERSION_STR) -static
-#LDFLAGS=-lpthread
-LDFLAGS=
-C_OBJECTS=client.o 
+LDFLAGS=-lpthread
+C_OBJECTS=client.o
 S_OBJECTS=server.o
 
 all: client server
- 
-client: $(C_OBJECTS) 
-	$(CC) -o $@ $(C_OBJECTS) $(LDFLAGS) 
+
+client: $(C_OBJECTS)
+	$(CC) -o $@ $(C_OBJECTS) $(LDFLAGS)
 
 server: $(S_OBJECTS)
-	$(CC) -o $@ $(S_OBJECTS) 
+	$(CC) -o $@ $(S_OBJECTS) $(LDFLAGS)
 
-clean: 
+clean:
 	rm -f $(C_OBJECTS) client
 	rm -f $(S_OBJECTS) server
