--- a/project.config
+++ b/project.config
@@ -36,6 +36,7 @@
 [access "refs/tags/*"]
 	push = group user/SeongO Park (raypark714)
 	push = group user/jung hyun kim (nxrohan)
+	push = group user/mingyoungbo
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
