nexell_sysv_defconfig: add iso-7816 test app This patch add the iso-7816 compile option.
Signed-off-by: ponytail2k <kwanghyuk@nexell.co.kr>
Change-Id: I8f455d00f81647286b6306dd3321d0acd22ede70

--- a/configs/nxp3220_sysv_defconfig
+++ b/configs/nxp3220_sysv_defconfig
@@ -74,6 +74,7 @@ BR2_PACKAGE_UTIL_LINUX_NOLOGIN=y
 BR2_PACKAGE_LIBDIRECTFB_NEXELL=y
 BR2_PACKAGE_DISK_TEST=y
 BR2_PACKAGE_HWIO=y
+BR2_PACKAGE_ISO7816=y
 BR2_PACKAGE_I2C_TEST=y
 BR2_PACKAGE_NX_VIDEO_API_TEST=y
 BR2_PACKAGE_NX_VIP_TEST=y
